--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Platform Developer I</title>
+        <title>AI-Associate</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -11,7 +11,7 @@
 
         <div class="main">
             <div class="quiz-container">
-                <h2>Platform Developer I (200)</h2>
+                <h2>AI Associate</h2>
                 <div class="question" id="question"></div>
                 <div class="imgquestion" id="imgquestion"></div>
                 <div class="options" id="options"></div>
